<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    android:background="@drawable/rounded_dialog_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/edit_profile_logo" />

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/close_svg"
            android:contentDescription="@string/close_button"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_orange_background"
        android:padding="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="textCapSentences"
            android:background="@drawable/custom_input"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_orange_background"
        android:padding="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/currentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:background="@drawable/custom_input"
            android:padding="10dp" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:background="@drawable/custom_input"
            android:padding="10dp"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:background="@drawable/custom_input"
            android:padding="10dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/round_orange_button"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_toStartOf="@+id/cancel_button"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/round_gray_button"
            android:text="@string/cancel_button"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</LinearLayout>