<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:background="@drawable/card_background">

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/image_placeholder"
        android:src="@drawable/image_placeholder"
        android:layout_marginEnd="20dp"
        android:scaleType="fitCenter"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/recipeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recipeCookTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_time"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_divider"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/recipeDifficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_difficulty"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/favoriteRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/favorite_filter"
        android:src="@drawable/favorite_unpressed_svg"/>

</LinearLayout>