<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/rounded_dialog_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/about_us_logo" />

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/close_svg"
            android:contentDescription="@string/close_button"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/app_icon"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_orange_background"
        android:padding="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_info"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/app_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/os_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_orange_background"
        android:padding="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creators"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/submitters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submitters"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/submission_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submission_with_date"
            android:textSize="14sp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_orange_button"
        android:text="@string/ok_button"
        android:textColor="@color/white" />

</LinearLayout>