<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    tools:context=".SplashActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

            <TextView
                android:id="@+id/creators"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creators"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adam"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/maxim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maxim"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/evyatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/evyatar"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/submissionDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submission_date"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>