<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/closeDialog"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hide"
            android:scaleType="centerCrop"
            android:src="@drawable/minus_svg"
            android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/close_svg"
            android:contentDescription="@string/close_button"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"/>

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:padding="8dp"
        android:text="@string/difficulty_filter"
        android:textAlignment="viewStart"
        android:textColor="@color/orange"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/allDifficulties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/show_all"
            android:src="@drawable/all_difficulty_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/show_all"
            android:textColor="@color/orange"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/easyDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/easy_difficulty"
            android:src="@drawable/easy_difficulty_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/easy_difficulty"
            android:textColor="@color/orange"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mediumDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/medium_difficulty"
            android:src="@drawable/medium_difficulty_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/medium_difficulty"
            android:textColor="@color/orange"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/hardDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hard_difficulty"
            android:src="@drawable/hard_difficulty_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/hard_difficulty"
            android:textColor="@color/orange"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>